<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EVA</string>
    <string name="challenge_score_notification">Difficulty: {{score}}</string>
    <string name="accept_challenge">Accept the challenge!</string>
    <string name="choose_challenge">Choose a challenge:</string>
    <string name="welcome_notification">Welcome {{username}}</string>
    <string name="get_challenge">Look at challenge</string>
    <string name="get_progress">Look at progress</string>
    <string name="login_alternative_login"><u>Alternative Login</u></string>
    <string name="login_facebook_login">Log in with Facebook</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_lost_password"><u>Lost password?</u></string>
    <string name="login_button">Log in</string>
    <string name="login_or">Or</string>
    <string name="register_personal_info_label">Personal Info</string>
    <string name="register_first_name">First Name</string>
    <string name="register_name">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_address_label">Address</string>
    <string name="register_street">Street</string>
    <string name="register_postal_code">Postal Code</string>
    <string name="register_city">City</string>
    <string name="register_account_label">Account</string>
    <string name="register_email_confirm">You will log in with <b>{Email}</b>.</string>
    <string name="register_password_hint" >Password</string>
    <string name="register_register_button">Register</string>
    <string name="register_sex_male">Male</string>
    <string name="register_sex_female">Female</string>
    <string name="facebook_app_id" translatable="false">1506320029692649</string>
    <string name="create_account"><u>Create account</u></string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_share">Share</string>
    <string name="challenge">Challenge</string>
    <string name="current_challenge">Current challenge</string>
    <string name="logout">Logout</string>
    <string name="register_repeat_password_hint">Repeat password</string>
    <string name="grade_omnivore">Omnivore</string>
    <string name="grade_pescetariar">Pescetariar (no meat, fish ok)</string>
    <string name="grade_parttime_vegetarian">Parttime vegetarian (at least 3 times per week vegetarian)</string>
    <string name="grade_vegatarian">Vegetarian (no meat or fish)</string>
    <string name="grade_vegan">Vegan (no animal products)</string>

    <string name="next">Next</string>
    <string name="register_choose_password">Choose a password</string>
    <string name="validation_submit_name">Please enter your name</string>
    <string name="validation_submit_email">Please enter your email</string>
    <string name="validation_password_size">Password must be at least 7 characters</string>
    <string name="validation_password_repeat">Passwords are not the same</string>

    <string name="your_progress">Your progress</string>
    <string name="ongoing_challenges">Ongoing challenges</string>
    <string name="completed_challenges">Completed challenges</string>
    <string name="achievements">Achievements</string>
    <string name="network_error">Unable to connect to the internet!</string>
    <string name="wrong_credentials">Incorrect email or password!</string>
    <string name="validation_password">Fill in your password</string>
    <string name="no_achievements">You have not yet earned any achievements!</string>
    <string name="no_completed_challenges">You have not yet finished any challenges!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challenge_completed">Challenge completed</string>
    <string name="congratulations">Congratulations!</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="diffculty_hard">Hard</string>
    <string name="preference_file_key" translatable="false">eva</string>
    <string name="no_completed_achievements">You have not received any achievements!</string>
    <string name="challenges_left">Only {{count}} challenges left!</string>
    <string name="all_challenges_completed">You\'ve completed all challenges!</string>
</resources>