<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hogent.group15.androidapp.MainMenuActivity">

    <ImageView
        android:layout_width="wrap_content" android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" android:src="@drawable/eva_logo"/>

    <TextView
        android:layout_width="match_parent" android:textSize="@dimen/h1_font_size"
        android:gravity="center" android:layout_height="0dp"
        android:text="@string/welcome_notification"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent" android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" android:text="@string/get_challenge"
        android:layout_marginTop="10dp" android:paddingTop="20dp" android:paddingBottom="20dp"
        android:onClick="onGetChallenge"/>

    <Button
        android:layout_width="match_parent" android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" android:text="@string/get_progress"
        android:layout_marginTop="10dp" android:paddingTop="20dp" android:paddingBottom="20dp"
        android:onClick="onGetProgress"/>
</LinearLayout>
