<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="hogent.group15.ui.fragments.RegisterPasswordFragment">

    <hogent.group15.ui.controls.EvaArtistampTextView
        android:id="@+id/personal_info_header" android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_control_margin"
        android:text="@string/register_choose_password"
        android:textSize="@dimen/h1_font_size" />

    <LinearLayout
        android:layout_centerVertical="true" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <hogent.group15.ui.controls.EvaEditText
            android:id="@+id/register_password"
            style="@style/evaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_grade"
            android:layout_marginTop="@dimen/default_control_margin"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword" />

        <hogent.group15.ui.controls.EvaEditText
            android:id="@+id/register_password_repeat"
            style="@style/evaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password"
            android:layout_marginTop="@dimen/default_control_margin"
            android:hint="@string/register_repeat_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>
</RelativeLayout>