<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    tools:context="hogent.group15.ui.fragments.RegisterMainFragment">

    <hogent.group15.ui.controls.EvaArtistampTextView
        android:id="@+id/personal_info_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_control_margin"
        android:text="@string/register_personal_info_label"
        android:textSize="@dimen/h1_font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_info_header"
        android:orientation="vertical">

        <hogent.group15.ui.controls.EvaEditText
            android:id="@+id/register_firstName"
            style="@style/evaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_info_header"
            android:layout_marginTop="@dimen/default_control_margin"
            android:hint="@string/register_first_name"
            android:inputType="textPersonName" />

        <hogent.group15.ui.controls.EvaEditText
            android:id="@+id/register_lastName"
            style="@style/evaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_firstName"
            android:layout_marginTop="@dimen/default_control_margin"
            android:hint="@string/register_name"
            android:inputType="textPersonName" />


        <hogent.group15.ui.controls.EvaEditText
            android:id="@+id/register_email"
            style="@style/evaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_lastName"
            android:layout_marginTop="@dimen/default_control_margin"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/register_sex"
            style="@style/evaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email"
            android:layout_marginTop="@dimen/default_control_margin" />

        <Spinner
            android:id="@+id/register_grade"
            style="@style/evaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_sex"
            android:layout_marginTop="@dimen/default_control_margin" />
    </LinearLayout>
</LinearLayout>
